--- a/static/css/base.css
+++ b/static/css/base.css
@@ -97,10 +97,25 @@ a.category-badge > span.badge:hover {
 
 .btt-link,
 .update-link,
-.remove-link, {
+.remove-link {
     cursor: pointer;
 }
 
+/* ------------------------------- bootstrap toasts */
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
 
 /* -------------------------------- Media Queries */
 
